Enhance SonarCloud configuration in sonar-project.properties with project name, version, source paths, test paths, and coverage report settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,14 +1,29 @@
 sonar.projectKey=Zakaryalahmadi_Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD
 sonar.organization=zakaryalahmadi
 
-
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD
-#sonar.projectVersion=1.0
-
+sonar.projectName=Gerez-un-projet-collaboratif-en-int-grant-une-demarche-CI-CD
+sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=back/src/main,front/src
+sonar.tests=back/src/test,front/src
+
+# Java specific configuration
+sonar.java.binaries=back/target/classes
+sonar.java.test.binaries=back/target/test-classes
+
+# JavaScript/TypeScript specific configuration
+sonar.javascript.lcov.reportPaths=front/coverage/lcov.info
+
+# Coverage reports
+sonar.coverage.jacoco.xmlReportPaths=back/target/site/jacoco/jacoco.xml
+
+# Language settings
+sonar.java.source=11
 
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
+
+# Exclusions for build files and dependencies
+sonar.exclusions=**/node_modules/**,**/target/**,**/*.spec.ts,**/*.spec.js
