Update SonarCloud configuration in sonar-project.properties to refine test paths and add new test file patterns

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=back/src/main,front/src
-sonar.tests=back/src/test,front/src
+sonar.tests=back/src/test
 
 # Java specific configuration
 sonar.java.binaries=back/target/classes
@@ -26,4 +26,7 @@ sonar.java.source=11
 sonar.sourceEncoding=UTF-8
 
 # Exclusions for build files and dependencies
-sonar.exclusions=**/node_modules/**,**/target/**,**/*.spec.ts,**/*.spec.js
+sonar.exclusions=**/node_modules/**,**/target/**,**/*.spec.ts,**/*.spec.js,**/build-wrapper-dump.json
+
+# Test file patterns for frontend
+sonar.test.inclusions=**/*.spec.ts,**/*.spec.js,**/*.test.ts,**/*.test.js
