--- a/.github/workflows/bobapp-ci.yml
+++ b/.github/workflows/bobapp-ci.yml
@@ -34,15 +34,10 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
-      - name: Run Backend Tests
+      - name: Build and Test Backend
         run: |
           cd back
-          mvn clean test
-
-      - name: Generate Backend Coverage Report
-        run: |
-          cd back
-          mvn jacoco:report
+          mvn clean compile test jacoco:report
 
       - name: Upload Backend Coverage to Codecov
         uses: codecov/codecov-action@v4
@@ -59,6 +54,7 @@ jobs:
           path: |
             back/target/site/jacoco/
             back/target/surefire-reports/
+            back/target/classes/
           retention-days: 1
 
   test-frontend:
