--- a/.github/workflows/bobapp-ci.yml
+++ b/.github/workflows/bobapp-ci.yml
@@ -39,14 +39,6 @@ jobs:
           cd back
           mvn clean compile test jacoco:report
 
-      - name: Upload Backend Coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          file: back/target/site/jacoco/jacoco.xml
-          flags: backend
-          name: backend-coverage
-          fail_ci_if_error: false
-
       - name: Upload Backend Coverage Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -82,14 +74,6 @@ jobs:
         run: |
           cd front
           npm run test -- --no-watch --no-progress --browsers=ChromeHeadless --code-coverage
-
-      - name: Upload Frontend Coverage to Codecov
-        uses: codecov/codecov-action@v4
-        with:
-          file: front/coverage/lcov.info
-          flags: frontend
-          name: frontend-coverage
-          fail_ci_if_error: false
 
       - name: Upload Frontend Coverage Artifacts
         uses: actions/upload-artifact@v4
@@ -134,7 +118,7 @@ jobs:
           path: front/coverage/
 
       - name: SonarCloud Scan
-        uses: SonarSource/sonarcloud-github-action@master
+        uses: SonarSource/sonarcloud-github-action@v2
         env:
           GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -144,3 +128,39 @@ jobs:
             -Dsonar.organization=zakaryalahmadi
             -Dsonar.coverage.jacoco.xmlReportPaths=back/target/site/jacoco/jacoco.xml
             -Dsonar.javascript.lcov.reportPaths=front/coverage/lcov.info
+
+  # build-and-push:
+  #   name: Build and Push Docker Images
+  #   runs-on: ubuntu-latest
+  #   needs: [sonar-analysis]
+  #   if: github.ref == 'refs/heads/main'
+
+  #   steps:
+  #     - uses: actions/checkout@v4
+
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
+
+  #     - name: Login to Docker Hub
+  #       uses: docker/login-action@v3
+  #       with:
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_PASSWORD }}
+
+  #     - name: Build and push backend image
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         context: ./back
+  #         push: true
+  #         tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.BACKEND_IMAGE_NAME }}:latest,${{ secrets.DOCKER_USERNAME }}/${{ env.BACKEND_IMAGE_NAME }}:${{ github.sha }}
+  #         cache-from: type=gha
+  #         cache-to: type=gha,mode=max
+
+  #     - name: Build and push frontend image
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         context: ./front
+  #         push: true
+  #         tags: ${{ secrets.DOCKER_USERNAME }}/${{ env.FRONTEND_IMAGE_NAME }}:latest,${{ secrets.DOCKER_USERNAME }}/${{ env.FRONTEND_IMAGE_NAME }}:${{ github.sha }}
+  #         cache-from: type=gha
+  #         cache-to: type=gha,mode=max
