--- a/.github/workflows/bobapp-ci.yml
+++ b/.github/workflows/bobapp-ci.yml
@@ -129,17 +129,29 @@ jobs:
             -Dsonar.coverage.jacoco.xmlReportPaths=back/target/site/jacoco/jacoco.xml
             -Dsonar.javascript.lcov.reportPaths=front/coverage/lcov.info
 
-  # build-and-push:
-  #   name: Build and Push Docker Images
-  #   runs-on: ubuntu-latest
-  #   needs: [sonar-analysis]
-  #   if: github.ref == 'refs/heads/main'
+  build-and-push:
+    name: Build and Push Docker Images
+    runs-on: ubuntu-latest
+    needs: [sonar-analysis]
 
-  #   steps:
-  #     - uses: actions/checkout@v4
+    steps:
+      - uses: actions/checkout@v4
 
-  #     - name: Set up Docker Buildx
-  #       uses: docker/setup-buildx-action@v3
+      - name: build image
+        run: |
+          docker build ./back/ -t  ${{ secrets.DOCKER_USERNAME }}/${{ secrets.BACKEND_IMAGE_NAME }}:latest 
+          docker build ./front/ -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.FRONTEND_IMAGE_NAME }}:latest
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v4
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: push image
+        run: |
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.BACKEND_IMAGE_NAME }}:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.FRONTEND_IMAGE_NAME }}:latest
 
   #     - name: Login to Docker Hub
   #       uses: docker/login-action@v3
