--- a/.github/workflows/bobapp-ci.yml
+++ b/.github/workflows/bobapp-ci.yml
@@ -8,8 +8,8 @@ on:
 
 env:
   REGISTRY: docker.io
-  BACKEND_IMAGE_NAME: bobapp-back
-  FRONTEND_IMAGE_NAME: bobapp-front
+  BACKEND_IMAGE_NAME: ocr-back
+  FRONTEND_IMAGE_NAME: ocr-front
 
 jobs:
   test-backend:
@@ -139,19 +139,19 @@ jobs:
 
       - name: build image
         run: |
-          docker build ./back/ -t  ${{ secrets.DOCKER_USERNAME }}/${{ secrets.BACKEND_IMAGE_NAME }}:latest 
-          docker build ./front/ -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.FRONTEND_IMAGE_NAME }}:latest
+          docker build ./back/ -t  ${{ secrets.DOCKER_USERNAME }}/${{ env.BACKEND_IMAGE_NAME }}:latest 
+          docker build ./front/ -t ${{ secrets.DOCKER_USERNAME }}/${{ env.FRONTEND_IMAGE_NAME }}:latest
 
       - name: Login to Docker Hub
-        uses: docker/login-action@v4
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_TOKEN }}
 
       - name: push image
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.BACKEND_IMAGE_NAME }}:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.FRONTEND_IMAGE_NAME }}:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{ env.BACKEND_IMAGE_NAME }}:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/${{ env.FRONTEND_IMAGE_NAME }}:latest
 
   #     - name: Login to Docker Hub
   #       uses: docker/login-action@v3
